fixed header image alignment

--- a/css/app.css
+++ b/css/app.css
@@ -50,7 +50,6 @@ header {
       background-size: contain;
       background-repeat: no-repeat;
       display: block;
-      height: 30px;
       width: 180px;
       padding: 15px 0;
       opacity: .7;
@@ -58,12 +57,10 @@ header {
 
   header h3 a.brandTM {
     background-image: url(../images/poweredByTM.svg);
-    background-position: center;
+    background-position: right;
     background-size: contain;
     background-repeat: no-repeat;
-    height: 60px;
     display: block;
-    height: 30px;
     width: 180px;
     padding: 15px 0;
     opacity: .7;
